--- a/packages/frontend/src/components/Dialog/styles.module.scss
+++ b/packages/frontend/src/components/Dialog/styles.module.scss
@@ -29,7 +29,6 @@ $paddingVertical: 20px;
     max-height: calc(100% - 50px);
     max-width: 733px;
     min-width: 350px;
-    overflow: hidden;
     width: unset;
 
     justify-content: center;
